--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -39,8 +39,8 @@
     .NavigationItem a:hover,
     .NavigationItem a:active,
     .NavigationItem a.active {
-        background-color: white;
+        background-color: #8F5C2C;
         border-bottom: 4px solid #40A4C8;
-        color:#8F5C2C;  
+        color: white;  
     }
 }
